// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`define type > any > any 1`] = `{}`;

exports[`define type > array > array 1`] = `
{
  "items": {
    "type": "string",
  },
  "type": "array",
}
`;

exports[`define type > binary > binary 1`] = `
{
  "format": "binary",
  "type": "string",
}
`;

exports[`define type > boolean > boolean 1`] = `
{
  "type": "boolean",
}
`;

exports[`define type > enums > enums 1`] = `
{
  "enum": [
    "1",
    "2",
    "3",
  ],
}
`;

exports[`define type > enums > enums 2`] = `
{
  "enum": [
    "MALE",
    "FEMALE",
  ],
}
`;

exports[`define type > integer > integer 1`] = `
{
  "type": "integer",
}
`;

exports[`define type > intersection > intersection 1`] = `
{
  "allOf": [
    {
      "$ref": "X",
    },
    {
      "additionalProperties": false,
      "properties": {
        "age": {
          "type": "integer",
        },
      },
      "required": [],
      "type": "object",
    },
  ],
}
`;

exports[`define type > never > never 1`] = `false`;

exports[`define type > null > null 1`] = `
{
  "type": "null",
}
`;

exports[`define type > number > number 1`] = `
{
  "type": "number",
}
`;

exports[`define type > object > object 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "age": {
      "type": "integer",
    },
    "name": {
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`define type > record > record 1`] = `
{
  "additionalProperties": {
    "type": "number",
  },
  "propertyNames": {
    "type": "string",
  },
  "type": "object",
}
`;

exports[`define type > tuple > tuple 1`] = `
{
  "items": [
    {
      "type": "number",
    },
    {
      "type": "number",
    },
  ],
  "type": "array",
}
`;

exports[`define type > union > union 1`] = `
{
  "oneOf": [
    {
      "type": "integer",
    },
    {
      "type": "string",
    },
  ],
}
`;

exports[`define type > union > union 2`] = `
{
  "discriminator": {
    "propertyName": "type",
  },
  "oneOf": [
    {
      "additionalProperties": false,
      "properties": {
        "type": {
          "enum": [
            "a",
          ],
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "name": {
          "type": "string",
        },
        "type": {
          "enum": [
            "b",
          ],
        },
      },
      "required": [
        "type",
        "name",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`define type > union > union 3`] = `
{
  "discriminator": {
    "propertyName": "type",
  },
  "oneOf": [
    {
      "additionalProperties": false,
      "properties": {
        "type": {
          "enum": [
            "a",
          ],
        },
      },
      "required": [
        "type",
      ],
      "type": "object",
    },
    {
      "additionalProperties": false,
      "properties": {
        "name": {
          "default": undefined,
          "type": "string",
        },
        "type": {
          "enum": [
            "b",
          ],
        },
      },
      "required": [
        "type",
        "name",
      ],
      "type": "object",
    },
  ],
}
`;
